# jcube

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIGITAL_TWIN.md  PLAN.md  README.md  example.py  pyproject.toml
docs/: PROJECT_ASSESSMENT.md  V5_POSTMORTEM.md  investigation_jcube_data_report.md
event_jepa_cube/: __init__.py  bandit.py  cascade.py  digital_twin.py  duckdb_connector.py  embedding_cube.py  event_jepa.py  exploit_twin.py  flight_transfer.py  gepa.py  graph_loader.py  jcube_bridge.py  jepa_trainer.py  lora_encoder.py  materializer.py  modal_gpu.py  mycelia_store.py  numpy_ops.py  orchestrator.py  predictors.py  registry.py  regularizers.py  run_probe.py  run_probe_hospital.py  run_probe_sweep.py  scale_pipeline.py  scale_pipeline_v5.py  scale_pipeline_v6.py  sequence.py  streaming.py  training.py  triggers.py  twin_api.py  verify_v62_epoch1.py
reports/: admission_discharge_analysis.py  admission_discharge_report_v5_2026_03.tex  analyze_admission.py  anomaly_report_2026_03.aux  anomaly_report_2026_03.out  anomaly_report_2026_03.tex  anomaly_report_2026_03.toc  anomaly_report_v5_2026_03.tex  explore_entities.py  generate_anomaly_report.py  modal_anomaly_report.py  modal_bradesco_executive.py  modal_bradesco_executivo.py  modal_bradesco_fev2026.py  modal_clinical_kpis.py  modal_cluster_report.py  modal_embedding_algebra_report.py  modal_physician_variation.py  modal_temporal_twin_report.py
tests/: benchmark.py  test_bandit.py  test_cascade.py  test_duckdb_connector.py  test_embedding_cube.py  test_event_jepa.py  test_example.py  test_flight_transfer.py  test_gepa.py  (+9 more)
(+1 files in other folders)
