[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event-jepa-cube"
version = "0.1.0"
description = "Event sequence processing and multi-semantic entity relationships using JEPA architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Dionisio Chiuratto Agourakis"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.0"]
duckdb = ["duckdb>=1.0.0"]
duckdb-arrow = ["duckdb>=1.0.0", "pyarrow>=14.0", "adbc-driver-duckdb>=0.9.0"]
mycelia-arrow = ["pyarrow>=14.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
all = ["event-jepa-cube[torch,duckdb,duckdb-arrow,mycelia-arrow,dev]"]

[project.urls]
Homepage = "https://github.com/josaum/jcube"
Repository = "https://github.com/josaum/jcube"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
